--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
 html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #F3F1E6; opacity: ;
+    background-color: #f4f4f4;
     margin: 10px
 }
 
@@ -40,7 +40,7 @@ h1 {
 }
 
 em{
-    background-color:#6f6f6f;
+    background-color:rgb(114, 65, 212);
     color: ghostwhite;
     opacity: 100%;
 }
