--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,10 @@ header{
 /* flexbox section 1 */
 
 .flexbox-about-container {
-    display: flex;
     align-items: center;
     flex-wrap: wrap;
-    min-width: 300px;
     align-content: center;
+    width: 100%;
 }
 
 p {
@@ -139,7 +138,6 @@ h2 {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        width: 750px;
     }
     header{
         background-color: #6f6f6f;
@@ -205,7 +203,6 @@ h2 {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        width: 992px;
     }
     header{
         background-color: #6f6f6f;
