updated footer and added proj 1 images

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ header{
 }
 
 
+
 #logo {
     display: flex;
     margin-right: auto;
@@ -41,36 +42,58 @@ header{
 
 }
 
+
 footer{
     background-color: rgb(114, 65, 212);
-    height: 40px;
+    height: 80px;
     display: flex;
-    flex-direction: row;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: space-between;
-    padding: 20px;
     margin-top: 100px;
-    width:100%
+    padding-top: 20px;
+    text-align: start;
+    width: 100%
     
 }
 
-h4 {
+
+.footer-about (
+     margin-left: 20px;
+)
+
+
+
+.footer-project {
+    display: flex;
+    width: 100%;
+}
+
+
+h3 {
     font-size: 15px;
-    letter-spacing: 1px;
-    line-height: 1.5;
     color: white;
     font-variant-caps: all-petite-caps;
     letter-spacing: 3px;
     font-weight: 200;
+    margin-left: 20px;
+    margin-top: 0px;
+    display: flex;
+    text-align: start;
 }
 
 .socials {
-    margin: 10px;
+    margin-right: 20px;
 }
 
-.footer-about {
-    margin-right: 10px;
-}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -80,6 +103,7 @@ h4 {
     align-items: center;
     flex-wrap: wrap;
     align-content: center;
+    justify-content: center;
     width: 100%;
 }
 
@@ -88,7 +112,7 @@ p {
     letter-spacing: .5px;
     line-height: 1.5;
     margin-top: 2em;
-    font-size: 12px;
+    font-size: 14px;
     
 }
 
@@ -96,7 +120,7 @@ h1 {
     font-variant-caps: all-petite-caps;
     letter-spacing: 3px;
     font-weight: 200;
-    font-size: 50px;
+    font-size: 60px;
     align-content: center;
 
 }
@@ -126,8 +150,8 @@ h2 {
 
 #calltoaction {
     font-weight: bold;
-    color: #6f6f6f;
-    opacity: 100%;
+    color: black
+    opacity: 80%;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -141,6 +165,8 @@ h2 {
 
 .flexbox-about-item-2 {
     max-width: 500px;
+    align-items: center;
+    justify-content: center;
 }
 
 #button {
@@ -315,8 +341,6 @@ h2 {
 
 /* form */
 
-
-
 form {
     margin: 50px auto;
     width: 90%;
@@ -405,7 +429,6 @@ min-width: 350px;
 }
 
 
-
 /* project page */
 
 
@@ -419,6 +442,7 @@ min-width: 350px;
     flex-direction: column;
     background-color: #97e7d3;
     width: 100%;
+    padding-bottom: 50px;
 }
 
 .flexbox-project-item {
@@ -491,8 +515,9 @@ min-width: 350px;
         max-width: 700px;
     }
     .about {
+        justify-content: center;
         text-align: center;
-        max-width: 700px;
+    
     }
     .flexbox-about-item {
         margin: 10px;
@@ -639,7 +664,8 @@ min-width: 350px;
 
     .flexbox-about-item-2 {
         max-width: 600px;
-        justify-content: right;
+        justify-content: center;
+        align-items: center;
     }
 
     .about {
@@ -652,7 +678,7 @@ min-width: 350px;
         letter-spacing: .5px;
         line-height: 1.5;
         margin-top: 1em;
-        font-size: 12px;
+        font-size: 14px;
         
     }
 
@@ -670,7 +696,7 @@ min-width: 350px;
     }
 
     h2 {
-        font-size: 13px;
+        font-size: 18px;
         letter-spacing: 1px;
         line-height: 1.5;
     }
@@ -705,6 +731,8 @@ min-width: 350px;
     max-width: 900px;
 }
 
-#project-text {
-    min-width: 800px;
+.project-text {
+    width: 1000px;
+    text-align: center;
 }
+
